--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -9,17 +9,10 @@
   </div>
 </div>
 
-<div class="jumbotron">
-  <h1 class="display-4">Hi, there!</h1>
-  <p class="lead">Checkout our attractive pricing!</p>
-  <hr class="my-4">
-  <!-- <p></p> -->
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-</div>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Our Professional:</h1>
-    <!-- <p class="lead"></p> -->
+    <h1 class="display-4">Our Service:</h1>
+    <p class="lead"></p>
   </div>
 </div>
 <div class="row justify-content-center">
@@ -47,4 +40,11 @@
       </div>
     </div>
   </div>
+</div>
+<div class="jumbotron">
+  <h1 class="display-4">Hi, there!</h1>
+  <p class="lead">Checkout our attractive package!</p>
+  <hr class="my-4">
+  <!-- <p></p> -->
+  <a class="btn btn-primary btn-lg" routerLink="/pricing" role="button">Learn more</a>
 </div>
