--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         <div class="col-md-6 mt-md-0 mt-3">
 
           <!-- Content -->
-          <h5 class="text-uppercase">Jingle Web Design</h5>
+          <a class="text-uppercase" routerLink="">Web Design</a>
           <p>Professional and affordable web design</p>
 
         </div>
@@ -27,10 +27,10 @@
 
             <ul class="list-unstyled">
               <li>
-                <a href="#!">Subscribe</a>
+                <a routerLink="subscribe">Subscribe</a>
               </li>
               <li>
-                <a href="#!">FeedBack</a>
+                <a routerLink="contact-us">Contact Us</a>
               </li>
             </ul>
 
@@ -45,10 +45,10 @@
 
             <ul class="list-unstyled">
               <li>
-                <a href="#!">Pricing</a>
+                <a routerLink="pricing">Pricing</a>
               </li>
               <li>
-                <a href="#!">About Us</a>
+                <a routerLink="about-us">About Us</a>
               </li>
             </ul>
 
