--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -5,9 +5,11 @@
   </div>
 </div>
 <div *ngIf="submitted">
-  <app-alert-bar></app-alert-bar>
+  <app-alert-bar [success]="success" 
+    [text]="success ? 'Thank you for your submission.' : 'Something went wrong.'"
+  ></app-alert-bar>
 </div>
-<form #contactUsForm="ngForm">
+<form #contactUsForm="ngForm" (ngSubmit)="submit(contactUsForm.value)">
   <div class="form-group">
     <label for="name">Name</label>
     <input 
@@ -37,6 +39,7 @@
     >
     <div *ngIf="email.errors">
       <small *ngIf="email.touched && email.errors.required" class="form-text text-danger">Email is required</small>
+      <small *ngIf="email.touched && email.errors.email" class="form-text text-danger">Email is invalid</small>
     </div>
   </div>
   <div class="form-group">
