--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,8 +18,14 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="about-us">About Us</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!logged_in">
+        <a class="nav-link" routerLink="register">Register</a>
+      </li>
+      <li class="nav-item" *ngIf="!logged_in">
         <a class="nav-link" routerLink="login">Login</a>
+      </li>
+      <li class="nav-item" *ngIf="logged_in">
+        <a class="nav-link" (click)="logout()">Logout</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
